--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,9 +12,46 @@ body {
   line-height: 1.5;
 }
 
+ul, li, p {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
 #search-box {
   font: inherit;
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+.country__flag {
+    width: 50px;
+    height: 30px;
+}
+
+.country_item {
+  list-style: none;
+  
+}
+
+.country_item--main{
+  display: flex;
+  align-items: center;
+}
+
+.countries__flag--list{
+    width: 20px;
+    height: 15px;
+}
+
+.countries__item--list {
+  display: flex;
+  align-items: center;
 }
