--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -47,11 +47,51 @@ img {
 }
 
 .countries__flag--list{
-    width: 20px;
-    height: 15px;
+    width: 40px;
+    height: 30px;
 }
 
 .countries__item--list {
   display: flex;
   align-items: center;
+  justify-content: center;
+}
+
+.country_card--wrapper {
+  display: flex;
+  align-items: center;
+
+}
+
+.country__coat {
+  margin-left: 10px;
+    width: 150px;
+    height: 180px;
+}
+
+.country__text{
+  font-weight: bold;
+}
+
+.text{
+  font-weight: normal;
+  margin-left: 5px;
+  font-style: italic;
+}
+
+.country-info{
+  display: flex;
+  justify-content: center;
+}
+
+.input{
+  display: flex;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.countries__name {
+  font-weight: bold;
+  font-size: large;
+  
 }
